Bug 727178 - Revert ANGLE path to using glFinish to resolve - r=bjacob