content/canvas/src/WebGLContext.cpp
@@ -489,15 +489,9 @@ WebGLContext::SetDimensions(PRInt32 width, PRInt32 height)
     // if we want EGL, try it now
     if (!gl && (preferEGL || useANGLE) && !preferOpenGL) {
         gl = gl::GLContextProviderEGL::CreateOffscreen(gfxIntSize(width, height), format);
-        if (gl) {
-            if (InitAndValidateGL()) {
-                if (useANGLE) {
-                    gl->SetFlushGuaranteesResolve(true);
-                }
-            } else {
-                LogMessage("Error during ANGLE OpenGL ES initialization");
-                return NS_ERROR_FAILURE;
-            }
+        if (gl && !InitAndValidateGL()) {
+            LogMessage("Error during ANGLE OpenGL ES initialization");
+            return NS_ERROR_FAILURE;
         }
     }
 #endif
